CRUD and form docs.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -92,6 +92,14 @@
       "designer-tutorials/designer-get-started": {
         "title": "Overview"
       },
+      "developer-tutorials/admin-app-crud": {
+        "title": "Admin App - CRUD",
+        "sidebar_label": "CRUD"
+      },
+      "developer-tutorials/admin-app-form": {
+        "title": "Admin App - Form",
+        "sidebar_label": "Forms"
+      },
       "developer-tutorials/admin-app-menu": {
         "title": "Admin App - Menu",
         "sidebar_label": "Menu"
@@ -127,6 +135,9 @@
       "developer-tutorials/local-setup": {
         "title": "Setting up a local project",
         "sidebar_label": "Setting up a local project"
+      },
+      "developer-tutorials/new-theme-addons": {
+        "title": "developer-tutorials/new-theme-addons"
       },
       "developer-tutorials/new-theme-creating-theme": {
         "title": "Creating a theme",
