Add API tutorial.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -98,11 +98,11 @@
       },
       "developer-tutorials/admin-app-form": {
         "title": "Admin App - Form",
-        "sidebar_label": "Forms"
+        "sidebar_label": "Form"
       },
       "developer-tutorials/admin-app-menu": {
-        "title": "Admin App - Menu",
-        "sidebar_label": "Menu"
+        "title": "Admin App - Menus",
+        "sidebar_label": "Menus"
       },
       "developer-tutorials/admin-app-overview": {
         "title": "Admin App - Overview",
@@ -111,6 +111,22 @@
       "developer-tutorials/admin-app-route": {
         "title": "Admin App - Routes",
         "sidebar_label": "Routes"
+      },
+      "developer-tutorials/api-config": {
+        "title": "API - Config",
+        "sidebar_label": "Config"
+      },
+      "developer-tutorials/api-entity": {
+        "title": "API - Entity",
+        "sidebar_label": "Entity"
+      },
+      "developer-tutorials/api-overview": {
+        "title": "API - Overview",
+        "sidebar_label": "Overview"
+      },
+      "developer-tutorials/api-schema": {
+        "title": "API - Schema",
+        "sidebar_label": "Schema"
       },
       "developer-tutorials/cms-element-creating-editor-plugin": {
         "title": "CMS Element - Creating editor plugin",
@@ -203,6 +219,7 @@
       "Theme Tutorial": "Theme Tutorial",
       "CMS Element Tutorial": "CMS Element Tutorial",
       "Admin App Tutorial": "Admin App Tutorial",
+      "API Tutorial": "API Tutorial",
       "Get Started": "Get Started",
       "Overview": "Overview",
       "Components": "Components"
