Add Entity tutorials.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -148,6 +148,26 @@
         "title": "CMS Element - Overview",
         "sidebar_label": "Overview"
       },
+      "developer-tutorials/entity-attributes": {
+        "title": "Entity - Attributes",
+        "sidebar_label": "Attributes"
+      },
+      "developer-tutorials/entity-configuration": {
+        "title": "Entity - Configuration",
+        "sidebar_label": "Configuration"
+      },
+      "developer-tutorials/entity-crud": {
+        "title": "Entity - CRUD",
+        "sidebar_label": "CRUD"
+      },
+      "developer-tutorials/entity-events": {
+        "title": "Entity - Events",
+        "sidebar_label": "Events"
+      },
+      "developer-tutorials/entity-overview": {
+        "title": "Entity - Overview",
+        "sidebar_label": "Overview"
+      },
       "developer-tutorials/local-setup": {
         "title": "Setting up a local project",
         "sidebar_label": "Setting up a local project"
@@ -220,6 +240,7 @@
       "CMS Element Tutorial": "CMS Element Tutorial",
       "Admin App Tutorial": "Admin App Tutorial",
       "API Tutorial": "API Tutorial",
+      "Entities Tutorial": "Entities Tutorial",
       "Get Started": "Get Started",
       "Overview": "Overview",
       "Components": "Components"
