Element layouts docs.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -172,9 +172,6 @@
         "title": "Setting up a local project",
         "sidebar_label": "Setting up a local project"
       },
-      "developer-tutorials/new-theme-addons": {
-        "title": "developer-tutorials/new-theme-addons"
-      },
       "developer-tutorials/new-theme-creating-theme": {
         "title": "Creating a theme",
         "sidebar_label": "Creating a theme"
@@ -197,6 +194,10 @@
       "developer-tutorials/deploy-local-project": {
         "title": "Deploying your project",
         "sidebar_label": "Deploying your project"
+      },
+      "developer-tutorials/theme-elements": {
+        "title": "Element layouts",
+        "sidebar_label": "Element layouts"
       },
       "get-started": {
         "title": "Get Started",
