Create website updated

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -129,20 +129,20 @@
         "sidebar_label": "Schema"
       },
       "developer-tutorials/cms-element-creating-editor-plugin": {
-        "title": "CMS Element - Creating editor plugin",
-        "sidebar_label": "Creating editor plugin"
+        "title": "CMS Element - Editor plugin",
+        "sidebar_label": "Editor plugin"
       },
       "developer-tutorials/cms-element-creating-element-group": {
-        "title": "CMS Element - Creating element group",
-        "sidebar_label": "Creating element group"
+        "title": "CMS Element - Element group",
+        "sidebar_label": "Element group"
       },
       "developer-tutorials/cms-element-creating-render-plugin": {
-        "title": "CMS Element - Creating render plugin",
-        "sidebar_label": "Creating render plugin"
+        "title": "CMS Element - Render plugin",
+        "sidebar_label": "Render plugin"
       },
       "developer-tutorials/cms-element-creating-settings-plugin": {
-        "title": "CMS Element - Creating settings plugin",
-        "sidebar_label": "Creating settings plugin"
+        "title": "CMS Element - Settings plugin",
+        "sidebar_label": "Settings plugin"
       },
       "developer-tutorials/cms-element-overview": {
         "title": "CMS Element - Overview",
@@ -233,9 +233,6 @@
       "Documentation": "Documentation",
       "Other": "Other",
       "Getting Started": "Getting Started",
-      "Basics": "Basics",
-      "Page Editor": "Page Editor",
-      "Elements": "Elements",
       "Plugins": "Plugins",
       "Theme Tutorial": "Theme Tutorial",
       "CMS Element Tutorial": "CMS Element Tutorial",
