Update developer docs.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -227,7 +227,8 @@
       "Get Started": "Get Started",
       "CMS Guides": "CMS Guides",
       "Developer Tutorials": "Developer Tutorials",
-      "GitHub": "GitHub"
+      "GitHub": "GitHub",
+      "Storybook": "Storybook"
     },
     "categories": {
       "Documentation": "Documentation",
