--- a/docs/migration/410-to-420.md
+++ b/docs/migration/410-to-420.md
@@ -84,7 +84,6 @@ const map = {
   REACT_APP_USER_POOL_REGION: "${cognito.userPool.Region}",
   REACT_APP_GRAPHQL_API_URL: "${cdn.url}/graphql",
   REACT_APP_API_URL: "${cdn.url}",
-  REACT_APP_FILES_PROXY: "${cdn.url}",
   REACT_APP_USER_POOL_ID: "${cognito.userPool.Id}",
   REACT_APP_USER_POOL_WEB_CLIENT_ID: "${cognito.appClients[0].ClientId}"
 };
@@ -150,8 +149,7 @@ const { setEnvironmentFromState } = require("@webiny/cli-plugin-deploy-component
 
 const map = {
   REACT_APP_GRAPHQL_API_URL: "${cdn.url}/graphql",
-  REACT_APP_API_URL: "${cdn.url}",
-  REACT_APP_FILES_PROXY: "${cdn.url}"
+  REACT_APP_API_URL: "${cdn.url}"
 };
 
 module.exports = {
