fix(docs): corrected case of GitHub, JavaScript and TypeScript

--- a/docs/migration/410-to-420.md
+++ b/docs/migration/410-to-420.md
@@ -243,5 +243,5 @@ And you're ready for development! 🚀
 <hr/>
 
 :::note need help?
-If you've encountered problems with anything in this guide, please do reach out to us using our [Github](https://github.com/webiny/webiny-js) or even better - our [Slack Community](https://www.webiny.com/slack). We'll be glad to help!
+If you've encountered problems with anything in this guide, please do reach out to us using our [GitHub](https://github.com/webiny/webiny-js) or even better - our [Slack Community](https://www.webiny.com/slack). We'll be glad to help!
 :::
