Contributing docs guide done

--- a/docs/contributing/documentation.mdx
+++ b/docs/contributing/documentation.mdx
@@ -1,7 +1,7 @@
 ---
-id: get-started
+id: documentation
 title: Contributing documentation
-sidebar_label: Get started
+sidebar_label: Documentation
 keywords: ["contributing", "documentation"]
 description: Get started guide on how to contribute documentation to Webiny.
 ---
@@ -158,6 +158,24 @@ This is a simple and good way to structure your article:
 - **Features**: Each section of the document
 - **Read next / Learn more**: Related documents that might help the user
 - **Troubleshooting**: User questions, common mistakes, and solutions
+
+### Language
+
+- Great writers use less words, and not more. Try to keep your sentences short and concise.
+- User US English and grammar.
+- Use inclusive language (they, them instead of his, hers).
+- Use the second-person point of view (you, yours)
+
+### Style guide
+
+To help everyone write and use the same writing style, Webiny documentation has a defined style guide.
+
+There are many style guides on the internet. Instead of creating a new one, we decided to opt-in and use one of the publicly available ones.
+
+For Webiny documentation, please follow the style guide defined by GitLab:
+https://docs.gitlab.com/ee/development/documentation/styleguide.html#language
+
+Many of the guide definitions are tested via the `Vale` tool.
 
 ## References
 
