Added an example template for a new doc

--- a/docs/contributing/documentation.mdx
+++ b/docs/contributing/documentation.mdx
@@ -177,6 +177,67 @@ https://docs.gitlab.com/ee/development/documentation/styleguide.html#language
 
 Many of the guide definitions are tested via the `Vale` tool.
 
+### Template for new docs
+
+```md
+---
+id: { document id }
+title: { short title - 70 chars max }
+sidebar_label: { optional: title for the sidebar }
+keywords: ["key", "words", "go", "here"]
+description: { description - max 200 chars }
+---
+
+## Feature or Use Case Name
+
+<!--If you are writing about a use case, start with a verb,
+for example, "Configure", "Implement", + the goal/scenario-->
+
+Write a description of the feature or use case. This introduction should answer
+these questions:
+
+- What is this feature or use case?
+- Who is it for?
+- What is the context in which it is used and are there any prerequisites or
+  requirements?
+- What can the audience do with this? (Be sure to consider all applicable
+  audiences, such as GitLab admin and developer-user.)
+- What are the benefits of using this over any existing alternatives?
+
+## Use cases
+
+Describe common use cases, typically in bulleted form. Include real-life examples
+for each.
+
+## Prerequisites
+
+State any prerequisites for using the feature. These might include:
+
+- Technical prereqs (for example, an account on a third-party service, an amount
+  of storage space, or prior configuration of another feature)
+- Prerequisite knowledge (for example, familiarity with certain GitLab features
+  or other products and technologies).
+
+Link each one to an appropriate place for more information.
+
+## Tasks
+
+Each topic should help users accomplish a specific task.
+
+The heading should:
+
+- Describe the task and start with a verb. For example, `Create a package` or
+  `Configure a pipeline`.
+- Be short and descriptive (up to ~50 chars).
+- Start from an `h2` (`##`), then go over `h3`, `h4`, `h5`, and `h6` as needed.
+  Never skip a hierarchy level (like `h2` > `h4`). It breaks the table of
+  contents and can affect the breadcrumbs.
+
+<!-- ## Troubleshooting
+
+Include any troubleshooting steps that you can foresee. -->
+```
+
 ## References
 
 - [book] Conversation and Community by Anne Gentle
