Fix broken links

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -85,10 +85,10 @@ To successfully build apps it's important to know some of the basic concepts and
 ### Use the Headless CMS
 Webiny Headless CMS comes with a GraphQL API, a UI to model your content and a UI for editors to input records. To successfully adopt the Headless CMS, we recommend the following articles: 
 
-- [Create a content model and access the records](!#) <Badge variant="outline">Tutorial</Badge>
-- [Using the GraphQ API](!#) <Badge variant="outline">Guide</Badge>
-- [Trigger a static site builds with webhooks](!#) <Badge variant="outline">Guide</Badge>
-- [Headless CMS API](!#) <Badge variant="outline">Reference</Badge>
+- [Create a content model and access the records](#!) <Badge variant="outline">Tutorial</Badge>
+- [Using the GraphQ API](#!) <Badge variant="outline">Guide</Badge>
+- [Trigger a static site builds with webhooks](#!) <Badge variant="outline">Guide</Badge>
+- [Headless CMS API](#!) <Badge variant="outline">Reference</Badge>
 - [Using the Headless CMS](#!) <Badge variant="outline">Using Webiny apps</Badge>
 
 ### Create landing pages using Page Builder and Form Builder
