Fixed mobile responsive grid breakpoints

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -30,7 +30,7 @@ It's easy to get started, just follow the installation tutorial:
 
 <Grid
   gap={2}
-  columns={[3]}>
+  width={[ '100%', '50%', '25%']}>
   <Box>
     <p><strong>With Webiny you can build:</strong></p>
     <ul>
