--- a/docs/tutorials/install-webiny/overview.mdx
+++ b/docs/tutorials/install-webiny/overview.mdx
@@ -40,7 +40,7 @@ Webiny has two base flavors in terms of how you can deploy it:
 <Theme>
 <Grid
   gap={2}
-  columns={[2]}>
+  width={[ '100%', '50%', '25%']}>
   <Box>
     <p><strong>Non-VPC deployment:</strong></p>
     <ul>
