Introduced YouTube component

--- a/docs/how-to-guides/deployment/configure-aws-credentials.mdx
+++ b/docs/how-to-guides/deployment/configure-aws-credentials.mdx
@@ -6,17 +6,13 @@ keywords: ["webiny", "serverless", "open source", "graphql", "reactjs"]
 description: Configure AWS credentials.
 ---
 
+import YouTube from "../../mdxComponents/youtube";
+
 This article guides you through configuring your AWS credentials for programmatic access. At the end of the tutorial, you will get your API keys needed to successfully deploy Webiny to your AWS cloud.
 
 If you prefer the video version, check out our YouTube video below:
 
-<iframe
-  width="805"
-  height="390"
-  src="https://www.youtube.com/embed/qmtDRmplMG4"
-  frameborder="0"
-  allowfullscreen
-></iframe>
+<YouTube id="qmtDRmplMG4" />
 
 ---
 
