--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -7,7 +7,7 @@ description: Documentation portal for Webiny serverless framework.
 slug: webiny/introduction
 ---
 
-import Theme from "./theme";
+import Theme from "./mdxComponents/theme";
 import { Box, Button, Heading, Grid, Link, Badge } from "theme-ui";
 
 <Theme>
