--- a/docs/tutorials/install-webiny/overview.mdx
+++ b/docs/tutorials/install-webiny/overview.mdx
@@ -6,7 +6,7 @@ keywords: ["webiny", "serverless", "open source", "graphql", "reactjs"]
 description: Installing Webiny on your AWS cloud.
 ---
 
-import Theme from "../../theme";
+import Theme from "../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 This tutorial covers installing Webiny to your AWS cloud account. At the end of the tutorial, you will have a Webiny instance running which you can access via a CloudFront URL.
