--- a/docs/how-to-guides/deployment/configure-aws-credentials.mdx
+++ b/docs/how-to-guides/deployment/configure-aws-credentials.mdx
@@ -8,7 +8,7 @@ description: Configure AWS credentials.
 
 import YouTube from "../../mdxComponents/youtube";
 
-This article guides you through configuring your AWS credentials for programmatic access. At the end of the tutorial, you will get your API keys needed to successfully deploy Webiny to your AWS cloud.
+This article guides you through configuring your AWS credentials for programmatic access. At the end of the tutorial, you will have your API keys and region configured to successfully deploy Webiny to your AWS cloud.
 
 If you prefer the video version, check out our YouTube video below:
 
@@ -89,7 +89,7 @@ Now that you have the **Access key ID** and **Secret access key** it's time to s
 
 ### Unix setup
 
-If you're on UNIX, create a folder named `.aws` inside your user folder, that's `~/.aws`. Inside that folder place a file called `credentials`. So the full path will be `~/.aws/credentials`.
+If you're on UNIX, create a folder named `.aws` inside your user folder, that's `~/.aws`. Inside that folder place a file called `credentials`. So the full path is `~/.aws/credentials`.
 
 ### Windows setup
 
@@ -99,15 +99,41 @@ On Windows machines, navigate to your user folder. That's `C:\Users\USERNAME\` (
 
 Now that we have our `credentials` file, edit the file and populate it like so:
 
-![aws-credentials](./assets/configure-aws-credentials/aws-credentials.png)
-
-Here is a code snippet in case you want to copy paste it:
-
 ```plain
 [default]
 aws_access_key_id = PASTE_ACCESS_KEY_ID_HERE
 aws_secret_access_key = PASTE_SECRET_ACCESS_KEY_HERE
-region = us-east-1
 ```
 
-And that's it! You now have your AWS credentials, and you're ready to deploy Webiny.
+The word `default` inside the square brackets is your profile name. If you don't explicitly configure a profile name, the `default` profile is used by AWS CLI and SDK.
+
+## Step 4: Configure the default region
+
+The last thing to configure is your default region. It's important to configure the region that is closest to your geographical location for optimal network latency. You can find which region is the most suitable for you using, for example, https://www.cloudping.info/. 
+
+To see the region codes, visit https://docs.aws.amazon.com/general/latest/gr/rande.html#regional-endpoints.
+
+If you don't want to bother with regions, use `us-east-1`.
+
+---
+
+### Unix setup
+
+Inside your `.aws` folder, the one we created in the previous step, create a file called `config`. So the full path is `~/.aws/config`.
+
+### Windows setup
+
+Inside your `.aws` folder, the one we created in the previous step, create a file called `config`. The full path should be like this: `C:\Users\USERNAME\.aws\config`.
+
+---
+
+Now that we have our `config` file, edit the file and populate it like so:
+
+```plain
+[default]
+region = YOUR_AWS_REGION
+```
+
+This means that for your `default` profile, that particular region is used.
+
+And that's it! You now have your AWS credentials, your default region, and you're ready to deploy Webiny.
