fix: set link for Install button

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -20,9 +20,9 @@ Welcome! 👋 **Webiny** is a framework for building applications which run on t
 
 It's easy to get started, just follow the installation tutorial:
 
-<Link href='#!'><Button>Install Webiny</Button></Link>
+<Link href="/docs/tutorials/install-webiny"><Button>Install Webiny</Button></Link>
 
---- 
+---
 
 ## About Webiny
 
@@ -83,7 +83,7 @@ To successfully build apps it's important to know some of the basic concepts and
 
 
 ### Use the Headless CMS
-Webiny Headless CMS comes with a GraphQL API, a UI to model your content and a UI for editors to input records. To successfully adopt the Headless CMS, we recommend the following articles: 
+Webiny Headless CMS comes with a GraphQL API, a UI to model your content and a UI for editors to input records. To successfully adopt the Headless CMS, we recommend the following articles:
 
 - [Create a content model and access the records](#!) <Badge variant="outline">Tutorial</Badge>
 - [Using the GraphQ API](#!) <Badge variant="outline">Guide</Badge>
@@ -93,7 +93,7 @@ Webiny Headless CMS comes with a GraphQL API, a UI to model your content and a U
 
 ### Create landing pages using Page Builder and Form Builder
 
-Webiny Page Builder and Form Builder might look as simple drag and drop tools, but they can do much more. We recommend you get yourself familiarized with the options, as well as ways to extend their functionality if needed. 
+Webiny Page Builder and Form Builder might look as simple drag and drop tools, but they can do much more. We recommend you get yourself familiarized with the options, as well as ways to extend their functionality if needed.
 
 - [Create an publish a page](#!) <Badge variant="outline">Tutorial</Badge>
 - [Create a Page Builder plugin](#!) <Badge variant="outline">Tutorial</Badge>
@@ -106,7 +106,7 @@ Webiny Page Builder and Form Builder might look as simple drag and drop tools, b
 
 ## Staying informed
 
-Our project and documentation is constantly improving and changing. Anything important we post to our [blog](https://www.webiny.com/blog) and our [newsletter](https://landing.mailerlite.com/webforms/landing/g9f1i1). 
+Our project and documentation is constantly improving and changing. Anything important we post to our [blog](https://www.webiny.com/blog) and our [newsletter](https://landing.mailerlite.com/webforms/landing/g9f1i1).
 
 Additionally you can find useful information on our twitter [@WebinyPlatform](https://twitter.com/WebinyPlatform).
 
