--- a/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
+++ b/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
@@ -21,7 +21,7 @@ There are few plugins types that you need to have in mind when creating a new fi
 Plugins of this type are defining the field for the UI part of the application.
 Here is a simple example of the plugin:
 
-```
+```tsx
 export default (): CmsEditorFieldTypePlugin => ({
   type: "cms-editor-field-type",
   name: "cms-editor-field-type-target",
@@ -46,7 +46,6 @@ export default (): CmsEditorFieldTypePlugin => ({
     },
   },
 });
-
 ```
 
 This example adds a `target` type field to the UI which can be set to accept multiple values.
@@ -58,7 +57,7 @@ For more advanced examples check either [text](https://github.com/webiny/webiny-
 Plugins of this type are used to render a field in the create or update entry form in the UI side of the application.
 A simple example of the renderer meant to render a `target` type field when set to allow multiple values.
 
-```
+```tsx
 export default (): CmsEditorFieldRendererPlugin => {
     type: "cms-editor-field-renderer",
     name: "cms-editor-field-renderer-target-multiple",
@@ -76,7 +75,6 @@ export default (): CmsEditorFieldRendererPlugin => {
         }
     }
 };
-
 ```
 
 You also must create a renderer for a field type `target` when not set to allow multiple values.
@@ -86,7 +84,7 @@ You also must create a renderer for a field type `target` when not set to allow 
 Plugins of this type define GraphQL part for a given field type in the API side of the application.
 A simple example of the plugin:
 
-```
+```tsx
 export default (): CmsModelFieldToGraphQLPlugin => ({
   type: "cms-model-field-to-graphql",
   name: "cms-model-field-to-graphql-target",
@@ -127,7 +125,6 @@ export default (): CmsModelFieldToGraphQLPlugin => ({
     },
   },
 });
-
 ```
 
 Note that there can be differences in management and read definitions. That is because of a case that administration is working with data directly and the user on the read side expects a resolved target.
@@ -139,7 +136,7 @@ When you created `CmsEditorFieldTypePlugin`, `CmsEditorFieldRendererPlugin` and 
 Plugins of this type define transformations that are run on the field of a type before saving into Elasticsearch.
 A kinda, simple example of the plugin:
 
-```
+```tsx
 export default (): CmsModelFieldToElasticSearchPlugin => ({
   type: "cms-model-field-to-elastic-search",
   name: "cms-model-field-to-elastic-search-target",
@@ -167,7 +164,6 @@ export default (): CmsModelFieldToElasticSearchPlugin => ({
     };
   },
 });
-
 ```
 
 Be aware that you must return top-level entry properties, for example, `values` or `rawValues`, merged with existing ones. Otherwise, you lose data. You can check the [richTextIndexing](https://github.com/webiny/webiny-js/blob/74466282f9a4abd97421d8cf8a3122b5957f4576/packages/api-headless-cms/src/content/plugins/es/indexing/richTextIndexing.ts) plugin for more reference.
@@ -180,7 +176,7 @@ Inside the `fromIndex` method, you always get an entry (`entry`) that has possib
 Plugins of this type are like the `CmsModelFieldToElasticSearchPlugin` plugin type, they just handle to and from storage transformations.
 A simple example to store field as compressed value:
 
-```
+```tsx
 export default (): CmsModelFieldToStoragePlugin => ({
   type: "cms-model-field-to-storage",
   name: "cms-model-field-to-storage-target",
@@ -192,7 +188,6 @@ export default (): CmsModelFieldToStoragePlugin => ({
     return gzip(value);
   },
 });
-
 ```
 
 You can check the [plugin](https://github.com/webiny/webiny-js/blob/de23b3428e0e280b86584db556a91013993dd6d0/packages/api-headless-cms/src/content/plugins/fieldsStorage/richTextStorage.ts) for storing `richText` as `string` packed with `jsonpack` library as another example.
