fix: correct link

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -100,4 +100,4 @@ This is probably due to the fact that the underlying software simply isn't ready
 export GODEBUG=asyncpreemptoff=1
 ```
 
-Please try executing the command in your terminal, and run the deployment again. If this does not help, feel free to [ask](https://app.slack.com/client/T0140N4DP36) for additional help.
+Please try executing the command in your terminal, and run the deployment again. If this does not help, feel free to [ask](https://www.webiny.com/slack) for additional help.
