--- a/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
+++ b/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
@@ -12,11 +12,11 @@ This guide should help you understand how to create Headless CMS field plugins a
 
 Also, in this guide, we assume that you know how Webiny plugins work.
 
-## Plugin types
+### Plugin Types
 
-There are few plugins types that you need to have in mind when creating a new field. For the UI part of the application, there are `CmsEditorFieldTypePlugin` and `CmsEditorFieldRendererPlugin`. For the API part of the application, there are `CmsModelFieldToGraphQLPlugin`, `CmsModelFieldToStoragePlugin` `CmsModelFieldToElasticSearchPlugin` of which only `CmsModelFieldToGraphQLPlugin` is required to make the field work.
+There are few plugins types that you need to have in mind when creating a new field. For the UI part of the application, there are `CmsEditorFieldTypePlugin` and `CmsEditorFieldRendererPlugin`. For the API part of the application, there are `CmsModelFieldToGraphQLPlugin`, `CmsModelFieldToStoragePlugin` `CmsModelFieldToElasticSearchPlugin` of which require only `CmsModelFieldToGraphQLPlugin` to make the field work.
 
-### Creating a plugin of type `CmsEditorFieldTypePlugin`
+#### Creating a plugin of type `CmsEditorFieldTypePlugin`
 
 Plugins of this type are defining the field for the UI part of the application.
 Here is a simple example of the plugin:
@@ -24,71 +24,75 @@ Here is a simple example of the plugin:
 ```tsx
 export default (): CmsEditorFieldTypePlugin => ({
   type: "cms-editor-field-type",
-  name: "cms-editor-field-type-target",
+  name: "cms-editor-field-type-textEntry",
   field: {
-    type: "target",
-    label: `Target`,
-    description: `A description the of field`,
+    type: "largeText",
+    label: `Large text`,
+    description: `A text that can be extremely large, probably HTML or JSON.`,
     icon: <Icon />,
     allowMultipleValues: true,
     allowPredefinedValues: false,
-    multipleValuesLabel: `A description used when there are multiple values enabled.`,
+    multipleValuesLabel: `Large texts`,
     createField() {
       return {
-        type: "target",
+        type: "largeText",
         settings: {},
         validation: [],
         renderer: {
           // we leave this empty so renderer it is automatically chosen according to canUse() in the renderer plugin
-          name: "",
-        },
+          name: ""
+        }
       };
-    },
-  },
+    }
+  }
 });
 ```
 
-This example adds a `target` type field to the UI which can be set to accept multiple values.
+This example adds a `largeText` type field to the UI which can be set to accept multiple values.
 
-For more advanced examples check either [text](https://github.com/webiny/webiny-js/blob/de23b3428e0e280b86584db556a91013993dd6d0/packages/app-headless-cms/src/admin/plugins/fields/text.tsx) field type or [ref](https://github.com/webiny/webiny-js/blob/de23b3428e0e280b86584db556a91013993dd6d0/packages/app-headless-cms/src/admin/plugins/fields/ref.tsx) field type.
+For more advanced examples, check either [text](https://github.com/webiny/webiny-js/blob/de23b3428e0e280b86584db556a91013993dd6d0/packages/app-headless-cms/src/admin/plugins/fields/text.tsx) field type or [ref](https://github.com/webiny/webiny-js/blob/de23b3428e0e280b86584db556a91013993dd6d0/packages/app-headless-cms/src/admin/plugins/fields/ref.tsx) field type.
 
-### Creating a plugin of type `CmsEditorFieldRendererPlugin`
+#### Creating a plugin of type `CmsEditorFieldRendererPlugin`
 
 Plugins of this type are used to render a field in the create or update entry form in the UI side of the application.
-A simple example of the renderer meant to render a `target` type field when set to allow multiple values.
+A simple example of the renderer meant to render a `largeText` type field when set to allow multiple values.
 
 ```tsx
 export default (): CmsEditorFieldRendererPlugin => {
     type: "cms-editor-field-renderer",
-    name: "cms-editor-field-renderer-target-multiple",
+    name: "cms-editor-field-renderer-largeText-multiple",
     renderer: {
-        rendererName: "targetsRenderer",
-        name: `Targets`,
-        description: `Renders targets.`,
+        rendererName: "largeTextRenderer",
+        name: `Large texts`,
+        description: `Renders multiple large text inputs.`,
         canUse({ field }) {
-            return field.type === "target" && field.multipleValues;
+            return field.type === "largeText" && field.multipleValues;
         },
         render(props) {
             return (
-                <TargetListComponent />
+                <>
+                  <LargeText />
+                  <LargeText />
+                  <AddMore />
+                </>
             );
         }
     }
 };
 ```
 
-You also must create a renderer for a field type `target` when not set to allow multiple values.
+You also must create a renderer for a field type `largeText` when not set to allow multiple values.
 
-### Create a plugin of type `CmsModelFieldToGraphQLPlugin`
+#### Create a plugin of type `CmsModelFieldToGraphQLPlugin`
 
-Plugins of this type define GraphQL part for a given field type in the API side of the application.
+Plugins of this type define GraphQL part for a field type in the API side of the application.
 A simple example of the plugin:
 
 ```tsx
 export default (): CmsModelFieldToGraphQLPlugin => ({
   type: "cms-model-field-to-graphql",
-  name: "cms-model-field-to-graphql-target",
-  fieldType: "target",
+  name: "cms-model-field-to-graphql-largeText",
+  fieldType: "largeText",
   isSortable: false,
   isSearchable: false,
   manage: {
@@ -99,7 +103,7 @@ export default (): CmsModelFieldToGraphQLPlugin => ({
       return field.fieldId + ": String";
     },
     createResolver({ field }) {
-      return (instance) => {
+      return instance => {
         return instance[field.fieldId];
       };
     },
@@ -109,11 +113,11 @@ export default (): CmsModelFieldToGraphQLPlugin => ({
       }
 
       return `${field.fieldId}: String`;
-    },
+    }
   },
   read: {
     createResolver({ field }) {
-      return (instance) => {
+      return instance => {
         return instance[field.fieldId];
       };
     },
@@ -122,16 +126,16 @@ export default (): CmsModelFieldToGraphQLPlugin => ({
         return `${field.fieldId}: [String]`;
       }
       return `${field.fieldId}: String`;
-    },
-  },
+    }
+  }
 });
 ```
 
-Note that there can be differences in management and read definitions. That is because of a case that administration is working with data directly and the user on the read side expects a resolved target.
+Note that there can be differences in management and read definitions. That is because of a case that administration is working with data directly and the user on the read side expects a resolved field.
 
-When you created `CmsEditorFieldTypePlugin`, `CmsEditorFieldRendererPlugin` and `CmsModelFieldToGraphQLPlugin` type plugins, your field is ready to be used. Just import them in the application.
+When you created `CmsEditorFieldTypePlugin`, `CmsEditorFieldRendererPlugin` and `CmsModelFieldToGraphQLPlugin` plugin types, your field is ready to be used. Just import them in the application.
 
-### Create a plugin of type `CmsModelFieldToElasticSearchPlugin`
+#### Create a plugin of type `CmsModelFieldToElasticSearchPlugin`
 
 Plugins of this type define transformations that are run on the field of a type before saving into Elasticsearch.
 A kinda, simple example of the plugin:
@@ -139,8 +143,8 @@ A kinda, simple example of the plugin:
 ```tsx
 export default (): CmsModelFieldToElasticSearchPlugin => ({
   type: "cms-model-field-to-elastic-search",
-  name: "cms-model-field-to-elastic-search-target",
-  fieldType: "target",
+  name: "cms-model-field-to-elastic-search-largeText",
+  fieldType: "largeText",
   toIndex({ toIndexEntry, storageEntry, originalEntry, field }) {
     const value = toIndexEntry.values[field.fieldId];
     delete toIndexEntry.values[field.fieldId];
@@ -148,8 +152,8 @@ export default (): CmsModelFieldToElasticSearchPlugin => ({
       values: toIndexEntry.values,
       rawValues: {
         ...toIndexEntry.rawValues,
-        [field.fieldId]: JSON.stringify(value),
-      },
+        [field.fieldId]: JSON.stringify(value)
+      }
     };
   },
   fromIndex({ entry, field }) {
@@ -158,11 +162,11 @@ export default (): CmsModelFieldToElasticSearchPlugin => ({
     return {
       values: {
         ...entry.values,
-        [field.fieldId]: JSON.parse(value),
+        [field.fieldId]: JSON.parse(value)
       },
-      rawValues: entry.rawValues,
+      rawValues: entry.rawValues
     };
-  },
+  }
 });
 ```
 
@@ -171,7 +175,7 @@ Be aware that you must return top-level entry properties, for example, `values` 
 Inside the `toIndex` method, you can get the original entry (`originalEntry`), the one that was prepared for storage (`storageEntry`), and the one that is inserted into the Elasticsearch (`toIndexEntry`). You should not change them, but you can.
 Inside the `fromIndex` method, you always get an entry (`entry`) that has possibly been modified by some previous Elasticsearch plugin.
 
-### Create a plugin of type `CmsModelFieldToStoragePlugin`
+#### Create a plugin of type `CmsModelFieldToStoragePlugin`
 
 Plugins of this type are like the `CmsModelFieldToElasticSearchPlugin` plugin type, they just handle to and from storage transformations.
 A simple example to store field as compressed value:
@@ -179,14 +183,14 @@ A simple example to store field as compressed value:
 ```tsx
 export default (): CmsModelFieldToStoragePlugin => ({
   type: "cms-model-field-to-storage",
-  name: "cms-model-field-to-storage-target",
-  fieldType: "target",
+  name: "cms-model-field-to-storage-largeText",
+  fieldType: "largeText",
   async fromStorage({ value }): Promise<any> {
     return ungzip(value);
   },
   async toStorage({ value }): Promise<string> {
     return gzip(value);
-  },
+  }
 });
 ```
 
