--- a/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
+++ b/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
@@ -2,7 +2,7 @@
 id: create-a-webiny-headless-cms-field-plugin
 title: Create a Webiny Headless CMS field plugin
 sidebar_label: Create a field plugin
-keywords: ["webiny", "serverless", "open source", "graphql", "reactjs"]
+keywords: ["webiny", "serverless", "headless cms", "graphql", "reactjs"]
 description: How to create a new field plugin for Webiny Headless CMS application? We need to create both UI and API field plugins, which we go through in this guide.
 ---
 
@@ -12,11 +12,11 @@ This guide should help you understand how to create Headless CMS field plugins a
 
 Also, in this guide, we assume that you know how Webiny plugins work.
 
-### Plugin Types
+## Plugin Types
 
 There are few plugins types that you need to have in mind when creating a new field. For the UI part of the application, there are `CmsEditorFieldTypePlugin` and `CmsEditorFieldRendererPlugin`. For the API part of the application, there are `CmsModelFieldToGraphQLPlugin`, `CmsModelFieldToStoragePlugin` `CmsModelFieldToElasticSearchPlugin` of which require only `CmsModelFieldToGraphQLPlugin` to make the field work.
 
-#### Creating a plugin of type `CmsEditorFieldTypePlugin`
+### Creating a plugin of type `CmsEditorFieldTypePlugin`
 
 Plugins of this type are defining the field for the UI part of the application.
 Here is a simple example of the plugin:
@@ -52,7 +52,7 @@ This example adds a `largeText` type field to the UI which can be set to accept 
 
 For more advanced examples, check either [text](https://github.com/webiny/webiny-js/blob/de23b3428e0e280b86584db556a91013993dd6d0/packages/app-headless-cms/src/admin/plugins/fields/text.tsx) field type or [ref](https://github.com/webiny/webiny-js/blob/de23b3428e0e280b86584db556a91013993dd6d0/packages/app-headless-cms/src/admin/plugins/fields/ref.tsx) field type.
 
-#### Creating a plugin of type `CmsEditorFieldRendererPlugin`
+### Creating a plugin of type `CmsEditorFieldRendererPlugin`
 
 Plugins of this type are used to render a field in the create or update entry form in the UI side of the application.
 A simple example of the renderer meant to render a `largeText` type field when set to allow multiple values.
@@ -83,7 +83,7 @@ export default (): CmsEditorFieldRendererPlugin => {
 
 You also must create a renderer for a field type `largeText` when not set to allow multiple values.
 
-#### Create a plugin of type `CmsModelFieldToGraphQLPlugin`
+### Create a plugin of type `CmsModelFieldToGraphQLPlugin`
 
 Plugins of this type define GraphQL part for a field type in the API side of the application.
 A simple example of the plugin:
@@ -135,7 +135,7 @@ Note that there can be differences in management and read definitions. That is b
 
 When you created `CmsEditorFieldTypePlugin`, `CmsEditorFieldRendererPlugin` and `CmsModelFieldToGraphQLPlugin` plugin types, your field is ready to be used. Just import them in the application.
 
-#### Create a plugin of type `CmsModelFieldToElasticSearchPlugin`
+### Create a plugin of type `CmsModelFieldToElasticSearchPlugin`
 
 Plugins of this type define transformations that are run on the field of a type before saving into Elasticsearch.
 A kinda, simple example of the plugin:
@@ -175,7 +175,7 @@ Be aware that you must return top-level entry properties, for example, `values` 
 Inside the `toIndex` method, you can get the original entry (`originalEntry`), the one that was prepared for storage (`storageEntry`), and the one that is inserted into the Elasticsearch (`toIndexEntry`). You should not change them, but you can.
 Inside the `fromIndex` method, you always get an entry (`entry`) that has possibly been modified by some previous Elasticsearch plugin.
 
-#### Create a plugin of type `CmsModelFieldToStoragePlugin`
+### Create a plugin of type `CmsModelFieldToStoragePlugin`
 
 Plugins of this type are like the `CmsModelFieldToElasticSearchPlugin` plugin type, they just handle to and from storage transformations.
 A simple example to store field as compressed value:
@@ -195,3 +195,7 @@ export default (): CmsModelFieldToStoragePlugin => ({
 ```
 
 You can check the [plugin](https://github.com/webiny/webiny-js/blob/de23b3428e0e280b86584db556a91013993dd6d0/packages/api-headless-cms/src/content/plugins/fieldsStorage/richTextStorage.ts) for storing `richText` as `string` packed with `jsonpack` library as another example.
+
+## Learn more
+
+### Tutorial: [Create a Webiny Headless CMS avatar field plugin](/docs/tutorials/headless-cms/create-a-webiny-headless-cms-avatar-field-plugin)
