wip: create project stacks docs

--- a/docs/key-topics/project-organisation.mdx
+++ b/docs/key-topics/project-organisation.mdx
@@ -9,9 +9,10 @@ description: Installing Webiny on your AWS cloud.
 import Theme from "../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
-This key topic covers the organisation of a Webiny project.
+This key topic covers key organisational units of every Webiny project.
 
 ---
+
 
 ## Monorepo organisation
 
@@ -25,6 +26,19 @@ Webiny CLI provides the `webiny workspaces` command, which makes it a bit easier
 
 ## Stacks
 
-With monorepo packages as the essential units that form your project, another organisational unit are stacks.
+With packages as the essential organisational units of every Webiny project, another unit are stacks.
 
-    Webiny uses the term "stack" in order to depict a specific section or piece of your project. A stack consists two
+Webiny uses the term "stack" in order to depict a specific segment of your project, which essentially consists of two elements:
+1. your code, which includes one or more packages, and can be anything from a simple GraphQL API, to a complete React application
+2. cloud infrastructure that supports your code or which is being utilized by it
+
+For example, in a newly created project, by default you receive three stacks. The `api` stack which represents your project's API, `apps/admin` stack which is your Admin area, and finally, the `apps/site` stack, which is your public website.
+
+Each of these three stacks are standalone units, and are built and deployed separately, using Webiny CLI.
+
+:::info Learn more about stacks
+To learn about stacks, how they work, how you can update and deploy them, and other helpful information, click [here](/docs/key-topics/stacks).
+:::
+
+## Apps and APIs
+
