wip: write important key-topics

--- a/docs/key-topics/project-applications/environments.mdx
+++ b/docs/key-topics/project-applications/environments.mdx
@@ -1,7 +1,7 @@
 ---
-id: working-with-stacks-using-cli
-title: Working with stacks
-sidebar_label: Working with stacks
+id: environments
+title: Environments
+sidebar_label: Environments
 keywords: ["webiny", "stacks", "deployment", "pulumi", "iac"]
 description: Deployment
 ---
@@ -14,6 +14,8 @@ import { Box, Button, Grid, Link } from "theme-ui";
 ---
 
 ## Key files
+maybe can bee used :down:
+Rephrasing this, from a Webiny project application's perspective, every application is supported by a Pulumi program. A Pulumi program can consist of one or more Pulumi program stacks, which essentially enable you to deploy multiple sets of cloud infrastructure resources. These sets can be exact copies, but can also be different. Respectively, this makes it possible to form a notion of multiple environments, or deploy different infrastructure if a new feature demands it.
 
 When talking about stack deployments, by default, Webiny relies on [Pulumi](https://www.pulumi.com/), which is a modern [infrastructure as code](https://docs.aws.amazon.com/whitepapers/latest/introduction-devops-aws/infrastructure-as-code.html) solution.
 
