--- a/docs/key-topics/project-organisation.mdx
+++ b/docs/key-topics/project-organisation.mdx
@@ -1,7 +1,7 @@
 ---
 id: project-organisation
-title: Project organisation
-sidebar_label: Project organisation
+title: Project Organisation
+sidebar_label: Project Organisation
 keywords: ["webiny", "serverless", "open source", "graphql", "reactjs"]
 description: Installing Webiny on your AWS cloud.
 ---
@@ -13,6 +13,11 @@ This key topic covers key organisational units of every Webiny project.
 
 ---
 
+<img
+  src={require('./assets/project-units.png').default}
+  class="no-shadow"
+  alt="Nice image"
+/>
 
 ## Monorepo organisation
 
@@ -24,7 +29,7 @@ Monorepo organisation is established using [yarn workspaces](https://classic.yar
 Webiny CLI provides the `webiny workspaces` command, which makes it a bit easier to perform commands across multiple workspaces. Be sure to check the [CLI Reference](#) or run `webiny workspaces --help` in your terminal for more information.
 :::
 
-## Stacks
+## Project Applications
 
 With packages as the essential organisational units of every Webiny project, another unit are stacks.
 
@@ -40,5 +45,5 @@ Each of these three stacks are standalone units, and are built and deployed sepa
 To learn about stacks, how they work, how you can update and deploy them, and other helpful information, click [here](/docs/key-topics/stacks).
 :::
 
-## Apps and APIs
+## Webiny Project
 
