feat(headless-cms): add avatar field plugin

--- a/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
+++ b/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
@@ -198,4 +198,4 @@ You can check the [plugin](https://github.com/webiny/webiny-js/blob/de23b3428e0e
 
 ## Learn more
 
-### Tutorial: [Create a Webiny Headless CMS avatar field plugin](/docs/tutorials/headless-cms/create-a-webiny-headless-cms-avatar-field-plugin)
+### Tutorial: [Create a Webiny Headless CMS address field plugin](/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin)
