--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-avatar-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-avatar-field-plugin.mdx
@@ -1,15 +1,284 @@
 ---
-id: create-a-webiny-headless-cms-avatar-field-plugin
-title: Create a Webiny Headless CMS avatar field plugin
-sidebar_label: Avatar field plugin
+id: create-a-webiny-headless-cms-address-field-plugin
+title: Create a Webiny Headless CMS address field plugin
+sidebar_label: Address field plugin
 keywords: ["webiny", "project", "install", "setup", "create"]
-description: Create a Webiny Headless CMS avatar field plugin.
+description: Create a Webiny Headless CMS address field plugin.
 ---
 
-## Coming soon...
+:::tip You can specify an optional title
+Heads up! Here's a pro-tip.
+:::
 
-We're working hard to get all the docs in order. New articles will be added daily.
+### Overview
+A detailed and more in-depth explanation and how-to for a Webiny Headless CMS field plugins. The tutorial example is the idea you need to search for some address and get it's coordinates.
+In this tutorial we assume that you know how Webiny plugins work.
 
-In the meantime, take a look at our [GitHub repo](https://github.com/webiny/webiny-js), it contains tons of examples to get you on track.
+For quick info on required plugins check our [How-to Guide: Create a Webiny Headless CMS field plugin](https://www.notion.so/webiny/How-to-Guide-Create-a-Webiny-Headless-CMS-field-plugin-cbe2bc97f19c4909a32d5032e0a9c143).
 
-Thank you for your patience :)
+### Narrative
+You need a field that gives you a functionality to search for an address via Google Maps API. When you select the address information (for example: coordinates) are set also set in the data. Also, you do not want to index that field and you want to encrypt it before saving into the storage.
+
+**The placement of the plugins**
+
+By all means, you can create plugins where ever you want - but try to stick to some structure. You have `api` and `apps` directories, so put your plugins in those, according to a plugin type. Our suggestion would be something like this:
+1. `[UI]` plugins folder - `apps/admin/code/src/plugins/headlessCMS/fields/address/`
+2. `[API]` plugins folder - `api/code/headlessCMS/src/fields/address/`
+
+Your field type is a name of the directory containing all the plugins for that type. Remember, there are multiple types of plugins for a single field type in both UI and API side.
+
+Files we are creating are:
+1. `addressFieldPlugin.ts` - API field definition
+2. `addressFieldStoragePlugin.ts` - API storage modifications
+3. `addressFieldIndexPlugin.ts` - API indexing modifications
+4. `addressFieldPlugin.tsx` - UI field definition and display when creating a model
+5. `addressFieldRendererPlugin.tsx` - UI display of the field when creating or updating the entry
+
+First we need to create a field definition plugin. We can start with the UI one. The base for the plugin is:
+
+```tsx title="[UI]/addressFieldPlugin.tsx"
+export default(): CmsEditorFieldTypePlugin => ({
+    type: "cms-editor-field-type",
+    name: "cms-editor-field-type-address",
+    field: {
+        type: "address",
+        label: "Address",
+        description: "Search for the address",
+        icon: <AddressIcon />,
+        allowMultipleValues: false,
+        allowPredefinedValues: false,
+        multipleValuesLabel: "",
+        createField() {}
+    }
+});
+```
+
+And in the `createField()` function we return the field data:
+```ts title="[UI]/addressFieldPlugin.tsx"
+createField() {
+    return {
+        type: "address",
+        name: "address",
+        validation: [],
+        renderer: {
+            name: ""
+        }
+    };
+}
+```
+Note that renderer name is left blank so code automatically determines which renderer to use. You can put the name of the renderer, but for our tutorial we leave it blank to use that for later.
+
+
+Now we can create the second UI plugin, a renderer for the field we just created.
+A base for the renderer plugin is:
+
+```tsx title="[UI]/addressFieldRendererPlugin.tsx"
+export default(): CmsEditorFieldRendererPlugin => {
+    type: "cms-editor-field-renderer",
+    name: "cms-editor-field-renderer-address",
+    renderer: {
+        rendererName: "addressRenderer",
+        name: `Address search`,
+        description: `Search for the address.`,
+        canUse({ field }) {},
+        render({ field, getBind }) {}
+    }
+};
+```
+
+Remember that we left the `renderer.name` property blank when we created the field? Now in the `canUse()` function you put the condition that determines if that particular renderer is for a given field:
+```tsx title="[UI]/addressFieldRendererPlugin.tsx"
+canUse({ field }) {
+    return field.type === "address";
+}
+```
+
+In the `render()` function you put what is actually displayed when the field rendering is called. We can create a `onSelect()` function that actually triggers the field change - `bind.onChange()`.
+```tsx title="[UI]/addressFieldRendererPlugin.tsx"
+render({ field, getBind }) {
+    const Bind = getBind();
+    const onSelect = ({coordinates, ...address}) => {
+        bind.onChange({
+            address,// an object containing country, city, zipCode, street and streetNumber
+            coordinates
+        });
+    };
+    return (
+        <Bind>
+            {bind => (
+                <AddressSearch
+                    {...bind}
+                    onSelect={onSelect}
+                    label={field.label}
+                    placeholder="Type to find the address."
+                />
+            )}
+        </Bind>
+    );
+}
+```
+
+Now let's go solve the API plugins. First we need to create a plugin of type `CmsContentModelField`.
+This is the base of that plugin:
+
+```ts title="[API]/addressFieldPlugin.ts"
+export default(): CmsModelFieldToGraphQLPlugin => ({
+    type: "cms-model-field-to-graphql",
+    name: "cms-model-field-to-graphql-address",
+    fieldType: "address",
+    isSortable: false,
+    isSearchable: false,
+    read: {},
+    manage: {}
+});
+```
+
+**Read definitions**
+
+In the read definition, for the read and preview API, we can have a user-friendly GraphQL field:
+```typescript title="[API]/addressFieldPlugin.ts"
+read: {
+    createSchema() {
+        return {
+            typeDefs: `
+                type Address {
+                    country
+                    city
+                    zipCode
+                    street
+                    streetNumber
+                    coordinates
+                }
+            `,
+            resolvers: {}
+        };
+    },
+    createTypeField({ field }) {
+        return `${field.fieldId}: Address`;
+    }
+}
+```
+
+And the resolver for that field:
+```typescript title="[API]/addressFieldPlugin.ts"
+read: {
+    createResolver({ field }) {
+        return instance => {
+            const {address, coordinates} = instance.values[field.fieldId];
+            const {country, city, zipCode, street, streetNumber} = address;
+            return {
+                country,
+                city,
+                zipCode,
+                street,
+                streetNumber,
+                coordinates
+            };
+        };
+    }
+}
+```
+
+Since we do not want the field to be filtered, we do not need to define `createGetFilters` or `createListFilters`.
+
+The manage side of the API can be exactly the same as the read one, but in our case it is a bit different.
+Since we save plain JSON value, this part is quite simple:
+```typescript title="[API]/addressFieldPlugin.ts"
+manage: {
+    createTypeField({ field }) {
+        return `${field.fieldId}: JSON`;
+    },
+    createInputField({ field }) {
+        return `${field.fieldId}: JSON`;
+    }
+}
+```
+
+Now we have everything required to create and save the field. Next thing we need is to prevent the indexing of the field. By default if a field is not searchable it is removed from the index. But for this tutorial we can create our own plugin. This is the base of that plugin:
+
+```typescript title="[API]/addressFieldIndexPlugin.ts"
+export default (): CmsModelFieldToElasticsearchPlugin => ({
+    type: "cms-model-field-to-elastic-search",
+    name: "cms-model-field-to-elastic-search-address",
+    fieldType: "address",
+    toIndex(args) {},
+    fromIndex(args) {}
+});
+```
+
+In `toIndex` we must remove the field from `values` and put it into non-indexable `rawValues` object:
+```typescript title="[API]/addressFieldIndexPlugin.ts"
+toIndex({field, toIndexEntry}) {
+    const values = toIndexEntry.values;
+    const value = values[field.fieldId];
+    delete values[field.fieldId];
+    return {
+        values,
+        rawValues: {
+            ...(toIndexEntry.rawValues || {}),
+            [field.fieldId]: value
+        }
+    };
+}
+```
+
+And in `fromIndex` we must revert that action:
+```typescript title="[API]/addressFieldIndexPlugin.ts"
+fromIndex({ field, entry }) {
+    const rawValues = entry.rawValues || {};
+    const value = rawValues[field.fieldId];
+    delete rawValues[field.fieldId];
+    return {
+        values: {
+            ...(entry.values || {}),
+            [field.fieldId]: value
+        },
+        rawValues
+    };
+}
+```
+
+This plugin now does what we want - disables the field indexing. Of course, we could pack the field with `jsonpack` or compress it in the `toIndex` method to take less space. The choice is all yours, just remember to revert what ever action you do.
+
+All we have left to write is the plugin for storage. As we said, we want to encrypt the data for the storage. You can what ever library you want, it is all up to you. For this tutorial we can use some custom `encrypt` and `decrypt` functions. The base of the plugin looks like this:
+
+```typescript title="[API]/addressFieldStoragePlugin.ts"
+export default (): CmsModelFieldToStoragePlugin => ({
+    type: "cms-model-field-to-storage",
+    name: "cms-model-field-to-storage-address",
+    fieldType: "address",
+    async fromStorage({ field, value }) {},
+    async toStorage({ value }) {}
+});
+```
+
+First, we encrypt the data. Our suggestion is to encrypt the data and return an object with encrypted value and method of encryption:
+```typescript title="[API]/addressFieldStoragePlugin.ts"
+async toStorage({ value }) {
+    return {
+        encryption: "webiny",
+        value: encrypt(value)
+    };
+}
+```
+Of course if you want to just return the encrypted value, feel free, the choice is yours.
+
+
+And then comes the decryption. Because we expect our value to have some structure, it is easy to check if decryption is necessary. Or if we need to throw an error due to something we expect is not there.
+```typescript title="[API]/addressFieldStoragePlugin.ts"
+async fromStorage({ field, value }) {
+    if (!value) {
+        return value;
+    } else if (typeof value !== "object") {
+        throw new Error("It seems that value received is not an object.");
+    } else if (!value.encryption) {
+        throw new Error("Missing type of the encryption in the value object.");
+    } else if (value.encryption !== "webiny") {
+        throw new Error(`This plugin cannot transform something not encrypted with "webiny".`);
+    }
+    return decrypt(value.value);
+}
+```
+
+
+You should now have a functioning field, apart the `AddressSearch` component and `encrypt`/`decrypt` functions - it is up to you to created them.
